<resources>
    <string name="app_name">Ecoleta</string>

    <!-- Login text -->
    <string name="login_button_text">Sign in with Google</string>

    <string name="navigation_home">Início</string>
    <string name="navigation_search">Buscar</string>
    <string name="navigation_add">Adicionar</string>
    <string name="navigation_itemType">Items</string>
    <string name="navigation_user">Usuário</string>
    <string name="default_web_client_id" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="solicitar_coleta">Solicitar Coleta</string>
    <string name="ponto_coleta">Ponto de Coleta</string>
    <string name="pergunta_cadastro">O que deseja cadastrar?</string>
    <string name="localizacao">Localização:</string>
    <string name="novo_ponto_de_coleta">Novo Ponto de Coleta</string>
    <string name="usar_localizacao_atual">Usar Localização Atual</string>
    <string name="ou">Ou</string>
    <string name="cep">Código Postal (Cep)</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="logradouro">Logradouro</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="avancar">Avançar</string>
    <string name="finalizar">Finalizar</string>
    <string name="descri_o">Descrição</string>
    <string name="horarios_de_atendimento_opcional">Horários de atendimento (opcional)</string>
    <string name="o_que_coleta">O que coleta</string>
    <string name="conte_mais_sobre_o_local">Conte mais sobre o local</string>
    <string name="sobre">Sobre</string>
    <string name="tire_uma_foto_do_ponto_de_coleta">Tire uma foto do ponto de coleta</string>
    <string name="deletar">Deletar</string>
    <string name="agendamento_coleta">Agendamentos de Coleta</string>
    <string name="nova_data_de_atendimento">Nova data de atendimento</string>
    <string name="salvar">Salvar</string>

</resources>